Fix overflow ios

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,10 +7,13 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+html,
 body {
     background-color: #fffcf6;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    position: relative;
+    height: 100%;
 }
 .text-bold {
     font-weight: 700;
